[gd_scene load_steps=21 format=3 uid="uid://darc3rffrt2jf"]

[ext_resource type="Texture2D" uid="uid://dcryohxn1dpp" path="res://art/sprites/objects/chest_01.png" id="1_dhycl"]
[ext_resource type="Script" uid="uid://dagk3tnmfw0j6" path="res://scripts/silver_chest.gd" id="1_dtdv7"]
[ext_resource type="Texture2D" uid="uid://xtar5vm844ew" path="res://others/Item 3-1.png.png" id="2_ubkm5"]
[ext_resource type="FontFile" uid="uid://clmr0r2ohpx88" path="res://others/superstar_memesbruh03.ttf" id="4_8nc4t"]
[ext_resource type="Texture2D" uid="uid://bi5vxoajjrwmf" path="res://others/ChatGPT Image Apr 18, 2025, 03_16_16 PM.png" id="5_mp7dt"]
[ext_resource type="AudioStream" uid="uid://cid7kpfelxxb3" path="res://others/Angels Harp Sound Effect 2.mp3" id="6_8nc4t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jw0yd"]
atlas = ExtResource("1_dhycl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtdv7"]
atlas = ExtResource("1_dhycl")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nc4t"]
atlas = ExtResource("1_dhycl")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mp7dt"]
atlas = ExtResource("1_dhycl")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mm8yd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw0yd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtdv7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nc4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mp7dt")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_a5awm"]
radius = 4.0

[sub_resource type="Animation" id="Animation_hq8kd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item3-1_png:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.429688, 0.40625)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item3-1_png:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Item3-1_png:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, -3)]
}

[sub_resource type="Animation" id="Animation_i10v6"]
resource_name = "heart"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item3-1_png:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.35, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.429688, 0.40625), Vector2(1, 0.944), Vector2(0.43, 0.43)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item3-1_png:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Item3-1_png:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, -3), Vector2(-1, -48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pqs2g"]
_data = {
&"RESET": SubResource("Animation_hq8kd"),
&"heart": SubResource("Animation_i10v6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n21n1"]
size = Vector2(40, 34)

[sub_resource type="Animation" id="Animation_m4ofw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2fc2m"]
resource_name = "fade_away"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_y6sft"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_heatd"]
_data = {
&"RESET": SubResource("Animation_m4ofw"),
&"fade_away": SubResource("Animation_2fc2m"),
&"new_animation": SubResource("Animation_y6sft")
}

[node name="Silver Chest" type="CharacterBody2D"]
y_sort_enabled = true
script = ExtResource("1_dtdv7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_as_relative = false
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_mm8yd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_a5awm")

[node name="Item3-1_png" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 2
position = Vector2(-1, -3)
scale = Vector2(0.429688, 0.40625)
texture = ExtResource("2_ubkm5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_pqs2g")
}

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_n21n1")

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_heatd")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
z_index = 7
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -203.0
offset_top = -68.0
offset_right = 203.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_8nc4t")
theme_override_font_sizes/font_size = 32
text = "press spacebar to interact"

[node name="ChatGptImageApr18,2025,031616Pm" type="Sprite2D" parent="CanvasLayer/Label"]
z_as_relative = false
position = Vector2(198, 15)
scale = Vector2(0.572266, 0.246338)
texture = ExtResource("5_mp7dt")

[node name="open_chest" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_8nc4t")
volume_db = 11.0

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
